# agent-data-generator

./: *yari Array*  .#data_gen.rb  Consumer.rb  Provider.rb  agent.rb  beta_reputation_system.rb  data_gen.rb  decision_model.rb  experiment.rb  parameters.rb  todos.org  type.rb
data/: 2014-01-10-data.csv
graphs/: AgentGraph.rb  FullyConnectedGraph.rb  ScaleFreeGraph.rb  SmallWorldGraph.rb
lib/lpsolve-5.5.0.10i/: CHANGES  MANIFEST  Makefile  Makefile.am  Makefile.in  autogen.sh  config.status  configure  configure.ac  lp_lib.c  lp_lib.h  lp_matrix.c  lp_mipbb.c  lp_presolve.c  lp_rlp.c  lp_rlp.h  lp_simplex.c  lpsolve55.pc  lpsolve55.pc.in
lib/lpsolve-5.5.0.10i/.deps/: colamd.Po  commonlib.Po  fortify.Po  ini.Po  lp_Hash.Po  lp_LUSOL.Po  lp_MDO.Po  lp_MPS.Po  lp_SOS.Po  lp_crash.Po  lp_lib.Po  lp_matrix.Po  lp_mipbb.Po  lp_params.Po  lp_presolve.Po  lp_price.Po  lp_pricePSE.Po  lp_report.Po  lp_rlp.Po  lp_scale.Po  lp_simplex.Po  lp_utils.Po  lp_wlp.Po  lusol.Po  mmio.Po  myblas.Po  yacc_read.Po
lib/lpsolve-5.5.0.10i/bfp/bfp_LUSOL/LUSOL/CVS/: Entries  Repository
lib/lpsolve-5.5.0.10i/demo/: Makefile  Makefile.am  Makefile.in  ccc  check_demo  check_demo.in  demo  demo.right
lib/lpsolve-5.5.0.10i/demo/.deps/: demo.Po
lib/lpsolve-5.5.0.10i/extra/Python/: Python.htm  example3.py  example3.py~  hash.c  hash.c~  hash.h  hash.h~  lpsolve.c  lpsolve.c~  lpsolvecaller.h  pythonmod.c  semantic.cache  setup.py
lib/lpsolve-5.5.0.10i/extra/Python/CVS/: Entries  Repository
lib/lpsolve-5.5.0.10i/lp_example/: README  ex1.lp  ex1sc.lp  ex1sos.lp  ex1sos.mps
lib/lpsolve-5.5.0.10i/lp_solve/: Makefile  Makefile.am  Makefile.in  check_lpsolve  check_lpsolve.in  colbug.right  coldombug.right  e1.right  ex7.right  lp_solve
lib/lpsolve-5.5.0.10i/lp_solve/.deps/: lp_solve.Po
lib/lpsolve-5.5.0.10i/lp_solve/doc/: Makefile  Makefile.in
lib/lpsolve-5.5.0.10i/lp_solve/doc/en/: Makefile  Makefile.am  Makefile.in  lp_solve.1
lib/lpsolve-5.5.0.10i/patches/: msvc_8_rlp_h.patch
lib/lpsolve-5.5.0.10i/patches/dispute/: lpsolve_api_tweaks.patch  ms_precise_timing.patch  msvc_8_rlp_c.patch
lib/lpsolve-5.5.0.10i/shared/: commonlib.c  commonlib.h
lib/lpsolve-5.5.0.10i/test/: colbug.lp  coldombug.lp  e1.lp  ex7.lp  presolveqbug.lp
test/: tc_beta_reputation_system.rb  tc_decision_model.rb
